update InStock/OutOfStock extracting